# hash-gis

./: .gitignore  next.config.js  package-lock.json  package.json
app/: layer-tree.tsx  layout.tsx  left-menu-manager.tsx  left-menu.tsx  map.tsx  page.tsx  types.ts  utils.ts
app/components/: map-legend.tsx  model-carad.tsx
app/context/: maplayers-context.tsx  model-context.tsx
app/dashboard/: page.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/crates/map-engine/: Cargo.toml  README.md
src-tauri/crates/map-engine/src/: affine.rs  cmap.rs  colour.rs  errors.rs  gdal.rs  lib.rs  mercator.rs  png.rs  tiles.rs  windows.rs
src-tauri/crates/map-engine/src/raster/: mod.rs  pixels.rs
src-tauri/crates/map-engine/src/tests/: affine.rs  cmap.rs  mercator.rs  mod.rs  raster.rs  tiles.rs  windows.rs
src-tauri/crates/map-engine/src/tests/data/: categorical_optimised.tif  chile_32718.tif  chile_4326.tif  chile_no_meta.tif  chile_no_overview.tif  chile_optimised.mbtiles  chile_optimised.tif  landsat8.tif  landsat8.tif.aux.xml
src-tauri/crates/map-engine/src/vector/: mod.rs
src-tauri/crates/rust-mapnik/: .gitignore  Cargo.toml  build.rs
src-tauri/crates/rust-mapnik/mapnik/: mapnik_c_api.h
src-tauri/crates/rust-mapnik/mapnik/windows/: libmapnik_c.lib
src-tauri/crates/rust-mapnik/src/: errors.rs  lib.rs  mapnik.rs
src-tauri/crates/rust-mapnik/styles/: test.xml  vector.xml
src-tauri/crates/server/: Cargo.toml  LICENSE  README.md
src-tauri/crates/server/src/: app.rs  lib.rs  main.rs  mapsettings.rs  state.rs  style.rs
src-tauri/crates/server/src/endpoints/: add_map.rs  get_tile.rs  mod.rs  preview.rs
src-tauri/crates/server/src/tests/: mapsettings.rs  mod.rs  server.rs  test_helpers.rs
src-tauri/crates/server/template/: preview.html
src-tauri/crates/sr/: .gitignore  Cargo.toml  build.rs
src-tauri/crates/sr/src/: errors.rs  lib.rs
src-tauri/src/: main.rs  rs.rs
