[package]
name = "map-engine"
version = "0.1.0"
authors = ["José Padarian <spadarian@gmail.com>"]
edition = "2018"
description = "A library to work with tiled geospatial (raster) data."
repository = "https://gitlab.com/spadarian/map-engine"
license = "MIT"
keywords = ["geo", "map", "tile", "raster"]
categories = ["visualization"]

[dependencies]
gdal = { version = "0.15", features = ["ndarray"] }
libc = "0.2"
ndarray = "0.15"
num-traits = "0.2"
palette = "0.6"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
lazy_static = "1.4"
uuid = { version = "1.4.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
