[package]
name = "map-engine-server"
version = "0.1.0"
authors = ["José Padarian <spadarian@gmail.com>"]
edition = "2018"
description = "An HTTP map tile server"
repository = "https://gitlab.com/spadarian/map-engine"
license = "MIT"
keywords = ["geo", "map", "tile", "raster"]
categories = ["visualization", "web-programming::http-server"]

#[[bin]]
#name = "map-engine-server"
#path = "src/bin/main.rs"

[dependencies]
map-engine = { version = "0.1", path = "../map-engine" }
async-std = { version = "1.6.5", features = ["attributes"] }
clap = { version = "3.0", features = ["derive"]}
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = { version = "0.16", default-features = false, features = ["h1-server", "logger"]}
uuid = { version = "1.4.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
http-types = "2.12.0"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.2"
tide-testing = "0.1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
